@@ -48,9 +48,13 @@ class Buffer
 		{
 			static::$canRegisterWrapper = false;
 
-			// Check for Suhosin
-			$hasSuhosin = false;
+			// Maybe the host has disabled registering stream wrappers altogether?
+			if (!function_exists('stream_wrapper_register'))
+			{
+				return false;
+			}
 
+			// Check for Suhosin
 			if (function_exists('extension_loaded'))
 			{
 				$hasSuhosin = extension_loaded('suhosin');
